# boost_asio_awaitable_ext

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt  default.nix  flake.nix  requirements.txt  shell.nix
cmake/: detect_project_name.cmake
include/: connect_to_nats.h  event.h  is_sequence_barrier.h  is_sequencer.h  message.h  multi_producer_sequencer.h  nats_coro.h  queue.h  received.h  schedule.h  schedule_asio.h  sequence_barrier.h  sequence_barrier_group.h  sequence_range.h  sequence_traits.h  single_producer_sequencer.h  subscribe.h
src/: connect_to_nats.cpp  message.cpp  nats_coro.cpp  queue.cpp  subscribe.cpp
test/: CMakeLists.txt  async_sleep.h  example_service.cpp  example_service2.cpp  main.cpp  test_asio_multithread.cpp  test_concepts.cpp  test_connect_to_nats.cpp  test_event.cpp  test_examples.cpp  test_message.cpp  test_multi_producer_sequencer.cpp  test_nats_coro.cpp  test_parallel_group.cpp  test_queue.cpp  test_received.cpp  test_schedule.cpp  test_sequence_barrier.cpp  test_sequence_barrier_group.cpp  test_sequence_traits.cpp  test_single_producer_sequencer.cpp  test_subscribe.cpp  test_timer.cpp  utils.cpp  utils.h  wait_signal.cpp
test/tsan/: CMakeLists.txt  event.cpp  multi_producer_sequencer.cpp  sequence_barrier.cpp  sequence_barrier_mock_awaiter.cpp  sequence_barrier_mock_awaiter.h
